[CST-3763] fix issue with menu navbar on small window view

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,24 +1,24 @@
-@media screen and (min-width: #{map-get($grid-breakpoints, md)}) {
+@media screen and (min-width: map-get($grid-breakpoints, md)) {
   a.navbar-brand {
     display: none;
   }
   .navbar-search {
     display: none;
   }
+
+  .header {
+    background-color: var(--ds-header-bg);
+  }
 }
 
 .navbar-brand img {
     height: var(--ds-header-logo-height);
-    @media screen and (max-width: map-get($grid-breakpoints, sm)) {
+    @media screen and (max-width: map-get($grid-breakpoints, md)) {
         height: var(--ds-header-logo-height-xs);
     }
 }
 .navbar-toggler .navbar-toggler-icon {
     background-image: none !important;
     line-height: 1.5;
+    color: var(--bs-link-color);
 }
-
-.header {
-  background-color: var(--ds-header-bg);
-}
-
