--- a/src/app/shared/lang-switch/lang-switch.component.scss
+++ b/src/app/shared/lang-switch/lang-switch.component.scss
@@ -2,10 +2,12 @@
   display:none;
 }
 
-.dropdown-toggle {
-  color: var(--ds-header-icon-color) !important;
+@media screen and (min-width: map-get($grid-breakpoints, md)) {
+  .dropdown-toggle {
+    color: var(--ds-header-icon-color) !important;
 
-  &:hover, &focus {
-    color: var(--ds-header-icon-color-hover);
+    &:hover, &focus {
+      color: var(--ds-header-icon-color-hover);
+    }
   }
 }
